--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,27 @@
-## Process this file with automake to produce Makefile.in
+#############################################################################
+# Makefile for ctools examples                                              #
+# ------------------------------------------------------------------------- #
+# Copyright (C) 2016 Juergen Knoedlseder                                    #
+# ------------------------------------------------------------------------- #
+#                                                                           #
+#  This program is free software: you can redistribute it and/or modify     #
+#  it under the terms of the GNU General Public License as published by     #
+#  the Free Software Foundation, either version 3 of the License, or        #
+#  (at your option) any later version.                                      #
+#                                                                           #
+#  This program is distributed in the hope that it will be useful,          #
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of           #
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            #
+#  GNU General Public License for more details.                             #
+#                                                                           #
+#  You should have received a copy of the GNU General Public License        #
+#  along with this program.  If not, see <http://www.gnu.org/licenses/>.    #
+#                                                                           #
+#############################################################################
 
-# Scripts to be distributed
+# Scripts to be install
 scripts = README.md \
+          generate_prod3_irfs.py \
           make_pointings.py \
           make_spectrum.py \
           make_ts_distributions.py \
@@ -19,13 +39,14 @@ scripts = README.md \
           show_response.py \
           show_sensitivity.py \
           show_spectrum.py \
-          show_ts_distribution.py
+          show_ts_distribution.py \
+          show_obs.py
 
-# Set directories
-scriptsdir   = $(datadir)/examples/python
-scripts_DATA = $(scripts)
+# Set install directories
+scriptsdir    = $(datadir)/examples/python
+scripts_DATA  = $(scripts)
 
-# Extra files to be distributed in the tar file
+# Files to be distributed in the tar file
 EXTRA_DIST = $(scripts)
 
 # Add hook rule to make the examples executable
