--- a/models/Makefile.am
+++ b/models/Makefile.am
@@ -1,17 +1,33 @@
-## Process this file with automake to produce Makefile.in
+#############################################################################
+# Makefile for models                                                       #
+# ------------------------------------------------------------------------- #
+# Copyright (C) 2016 Juergen Knoedlseder                                    #
+# ------------------------------------------------------------------------- #
+#                                                                           #
+#  This program is free software: you can redistribute it and/or modify     #
+#  it under the terms of the GNU General Public License as published by     #
+#  the Free Software Foundation, either version 3 of the License, or        #
+#  (at your option) any later version.                                      #
+#                                                                           #
+#  This program is distributed in the hope that it will be useful,          #
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of           #
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            #
+#  GNU General Public License for more details.                             #
+#                                                                           #
+#  You should have received a copy of the GNU General Public License        #
+#  along with this program.  If not, see <http://www.gnu.org/licenses/>.    #
+#                                                                           #
+#############################################################################
 
-# Background rate files to distribute
-#bkgs = bkg_dummy.txt
-#bkgsdir   = $(datadir)/models
-#bkgs_DATA = $(bkgs)
+# Models to install
+models = crab.xml \
+         crab_poly.xml \
+         crab_profile.xml \
+         disk.xml \
+         gauss.xml \
+         shell.xml
 
-# Models to distribute
-models      = crab.xml \
-              crab_poly.xml \
-              crab_profile.xml \
-              disk.xml \
-              gauss.xml \
-              shell.xml
+# Install models
 modelsdir   = $(datadir)/models
 models_DATA = $(models)
 
