--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,23 @@
-## Process this file with automake to produce Makefile.in
+#############################################################################
+# Makefile.am for ctools module                                             #
+# ------------------------------------------------------------------------- #
+# Copyright (C) 2016 Juergen Knoedlseder                                    #
+# ------------------------------------------------------------------------- #
+#                                                                           #
+#  This program is free software: you can redistribute it and/or modify     #
+#  it under the terms of the GNU General Public License as published by     #
+#  the Free Software Foundation, either version 3 of the License, or        #
+#  (at your option) any later version.                                      #
+#                                                                           #
+#  This program is distributed in the hope that it will be useful,          #
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of           #
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            #
+#  GNU General Public License for more details.                             #
+#                                                                           #
+#  You should have received a copy of the GNU General Public License        #
+#  along with this program.  If not, see <http://www.gnu.org/licenses/>.    #
+#                                                                           #
+#############################################################################
 
 # Darwin support
 MACOSX_DEPLOYMENT_TARGET=@CONFIGURE_MACOSX_DEPLOYMENT_TARGET@
@@ -60,10 +79,13 @@ scripts_DATA = $(scripts)
 # Things to install
 install-data-local: help-install
 
+# Things to uninstall
+uninstall-local: help-uninstall
+
 # Install help files
 help-install:
 	@$(mkinstalldirs) $(DESTDIR)$(datadir)/help && \
-    for file in $(top_srcdir)/doc/source/reference_manual/c*.rst ; do \
+    for file in $(top_srcdir)/doc/source/users/reference_manual/c*.rst ; do \
         filename="$${file##*/}" ; \
         basename="$${filename%%.*}" ; \
         helpname="$$basename.txt" ; \
@@ -74,6 +96,10 @@ help-install:
             $(DESTDIR)$(datadir)/help/"$$helpname" ; \
         rm -rf $(DESTDIR)$(datadir)/help/"$$helpname".bak ; \
     done
+
+# Uninstall help files
+help-uninstall:
+	rm -rf $(DESTDIR)$(datadir)/help
 
 # Add hook rule to make scripts executable
 install-data-hook:
