--- a/src/ctexpcube/Makefile.am
+++ b/src/ctexpcube/Makefile.am
@@ -1,4 +1,23 @@
-## Process this file with automake to produce Makefile.in
+#############################################################################
+# Makefile.am for ctexpcube tool                                            #
+# ------------------------------------------------------------------------- #
+# Copyright (C) 2016 Juergen Knoedlseder                                    #
+# ------------------------------------------------------------------------- #
+#                                                                           #
+#  This program is free software: you can redistribute it and/or modify     #
+#  it under the terms of the GNU General Public License as published by     #
+#  the Free Software Foundation, either version 3 of the License, or        #
+#  (at your option) any later version.                                      #
+#                                                                           #
+#  This program is distributed in the hope that it will be useful,          #
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of           #
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            #
+#  GNU General Public License for more details.                             #
+#                                                                           #
+#  You should have received a copy of the GNU General Public License        #
+#  along with this program.  If not, see <http://www.gnu.org/licenses/>.    #
+#                                                                           #
+#############################################################################
 
 # Set include directories
 INCLUDES = -I$(top_srcdir)/src/support
@@ -7,7 +26,7 @@ INCLUDES = -I$(top_srcdir)/src/support
 bin_PROGRAMS = ctexpcube
 
 # Sources
-sources = ctexpcube.cpp
+sources = ctexpcube.cpp ctexpcube.hpp
 
 # Libtool library
 noinst_LTLIBRARIES = libctexpcube.la
@@ -18,8 +37,11 @@ libctexpcube_la_LDFLAGS = @OPENMP_LIB_LDFLAGS@
 ctexpcube_SOURCES = main.cpp
 ctexpcube_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctexpcube_CPPFLAGS = @CPPFLAGS@
-ctexpcube_LDADD = libctexpcube.la $(top_srcdir)/src/support/libsupport.la
+ctexpcube_LDADD = libctexpcube.la $(top_builddir)/src/support/libsupport.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
-pfiles_DATA = ctexpcube.par
+pfiles_DATA = $(srcdir)/ctexpcube.par
+
+# Extra files to be distributed in the tar file
+EXTRA_DIST = $(pfiles_DATA)
